Correcting spacing.

--- a/src/styles/container-style.css
+++ b/src/styles/container-style.css
@@ -14,7 +14,7 @@
 .col-to-row{
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
+  justify-content: space-around;
 }
 
 /* responsive css  */
